Bug 841882 - Revert bug 597525.