content/html/content/src/nsTextEditorState.cpp
@@ -1747,7 +1747,9 @@ nsTextEditorState::GetValue(nsAString& aValue, bool aIgnoreWrap) const
       mCachedValue.Truncate();
     }
   } else {
-    if (mValue) {
+    if (!mTextCtrlElement->ValueChanged() || !mValue) {
+      mTextCtrlElement->GetDefaultValueFromContent(aValue);
+    } else {
       aValue = NS_ConvertUTF8toUTF16(*mValue);
     }
   }
